# console-playwrite-test

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  conftest.py  pyproject.toml  pytest_plugin.py
.github/workflows/: actions.yaml
conf/: settings.yaml
fixtures/: login.py
tests/: test_basic_operations.py
