[project]
requires-python = ">=3.10"
dependencies = [
    "pytest-playwright",
    "requests",
    "pytest",
    "playwright",
    "dynaconf",
    "pre-commit"
]

name = "console-playwrite-test"
version = "0.0.1"

[tool.setuptools.packages.find]
where = ["."]
include = ["conf*", "fixtures*", "playwright*"]

[tool.dynaconf]
settings_files = ["conf/settings.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
